# NNets

./: .gitignore  Advantages and benefits of the NNets project.md  CLAUDE.md  CMakeLists.txt  README.md  analysis.md  main.cpp  main.sln  main.vcxproj  plan.md  test.sh  Синтез NNets и jsonRVM.md
.github/workflows/: cmake.yml
cmake/: test_multithreading.cmake  test_retraining.cmake  test_save_load.cmake  test_simd_benchmark.cmake  test_verify.cmake
configs/: benchmark.json  custom_images.json  default.json  extended.json  keywords.json  simple.json  test_funcs_exhaustive.json  test_funcs_random_pair.json  test_funcs_sequence.json  test_funcs_triplet.json
experiments/: test_multithreading_speedup.sh  test_nan_fix.cpp  test_simd_micro.cpp  test_simd_speedup.sh
include/: json_io.h  neuron_generation.h  simd_ops.h
include/learning_funcs/: exhaustive_search.h  learning_func_base.h  learning_funcs.h  random_search.h  triplet_search.h
